<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Engineering Career Fair</string>
    <string name="AboutText">General Information</string>
    <string name="InfoText">Fair Information:</string>
    <string name="ScheduleText">Schedule</string>
    <string name="MapsText">Reed Arena Map</string>
    <string name="AdvancedSearchText">Advanced Search</string>
    <string name="CompanySearchText">Company Search:</string>
    <string name="AllAttendingText">All Attending Companies</string>
    <string name="SavedCompaniesText">Saved Companies</string>
    <string name="ContactText">Contact Information</string>
    <string name="SearchText">Search</string>
    <string name="DaysText">Days Attending</string>
    <string name="MajorText">Major</string>
    <string name="EmploymentText">Employment</string>
    <string name="DegreeText">Degree</string>
    <string name="WelcomeText">Welcome Dinner</string>
    <string name="ResultLabel">Search Results</string>
    <string name="EmailCareerFairText">Question about the fair?</string>
    <string name="EmailSysAdminText">Problem with the app?</string>
    <string-array name="DaysArray">
        <item>Any</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Both</item>
    </string-array>
    <string-array name="MajorsArray">
        <item>-</item>
        <item>Aerospace Engineering</item>
        <item>Agricultural Engineering</item>
        <item>Biological and Agricultural Engineering</item>
        <item>Biomedical Engineering</item>
        <item>Chemical Engineering</item>
        <item>Civil Engineering</item>
        <item>Computer Engineering</item>
        <item>Computer Science</item>
        <item>Electrical Engineering</item>
        <item>Engineering Systems Management</item>
        <item>Engineering Technology</item>
        <item>Health Physics</item>
        <item>Industrial and Systems Engineering</item>
        <item>Industrial Distribution</item>
        <item>Interdisciplinary Engineering</item>
        <item>Materials Science and Engineering</item>
        <item>Mechanical Engineering</item>
        <item>Nuclear Engineering</item>
        <item>Ocean Engineering</item>
        <item>Petroleum Engineering</item>
        <item>Radiological Health Engineering</item>
        <item>Safety Engineering</item>
    </string-array>
    <string-array name="DegreesArray">
        <item>-</item>
        <item>Bachelors</item>
        <item>Masters</item>
        <item>Doctorate</item>
    </string-array>    
    <string-array name="EmploymentArray">
        <item>-</item>
        <item>Intern</item>
        <item>Co-Op</item>
        <item>Intern or Co-Op</item>
        <item>Full-Time</item>
        <item>Part-Time</item>
    </string-array>
</resources>